--- a/Front-end/Index.html
+++ b/Front-end/Index.html
@@ -11,11 +11,12 @@
     <h1>Google 2.0</h1>
   </header>
   <div class="search-container">
-    <form action="search_results.php" method="post">
+    <form id="searchForm">
       <input type="text" id="search" name="search" placeholder="Søk her">
       <input type="submit" value="Google Search" class="btn">
       <input type="submit" value="I'm Feeling Lucky" class="btn">
     </form>
   </div>
 </body>
+  <script src="search.js"></script>
 </html>
