api changes and better front-end

--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -13,7 +13,10 @@
         <button class="header">Videoer</button>
     </header>
     <div id="searchPage">
-        <h1>Ingen sider funnet</h1>
+        <form id="searchForm">
+            <input type="text" id="search" name="search" placeholder="Søk her">
+            <input type="submit" value="Google Search" class="btn">
+          </form>
     </div>
     <footer>
         <div id="pageSwitch">
