--- a/Front-end/Index.html
+++ b/Front-end/Index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">              
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
-  <title>Google 2.0</title>
-</head>
-<body>
-  <header>
-    <h1>Google 2.0</h1>
-  </header>
-  <div class="search-container">
-    <form id="searchForm">
-      <input type="text" id="search" name="search" placeholder="Søk her">
-      <input type="submit" value="Google Search" class="btn">
-      <input type="submit" value="I'm Feeling Lucky" class="btn">
-    </form>
-  </div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Google 2.0</title>
+  </head>
+  <body>
+    <header>
+      <h1>Google 2.0</h1>
+    </header>
+    <div class="search-container">
+      <form id="searchForm">
+        <input type="text" id="search" name="search" placeholder="Søk her" />
+        <input type="submit" value="Google Search" class="btn" />
+        <input type="submit" value="I'm Feeling Lucky" class="btn" />
+      </form>
+    </div>
+  </body>
   <script src="search.js"></script>
 </html>
