assets, organisation and settings

--- a/Front-end/Index.html
+++ b/Front-end/Index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Google 2.0</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <title>Rapier</title>
   </head>
   <body>
     <header>
-      <h1>Google 2.0</h1>
+      <div class="topbar">
+        <a href="settings.html"><img src="assets/settings.svg" alt="settings" width="48" height="48" id="settIcon"></a>
+        <h1>Rapier</h1>
+        <img src="assets/user.svg" alt="settings" width="48" height="48">
+      </div>
     </header>
     <div class="search-container">
       <form id="searchForm">
         <input type="text" id="search" name="search" placeholder="Søk her" />
-        <input type="submit" value="Google Search" class="btn" />
+        <input type="submit" value="Rapier Search" class="btn" />
         <input type="submit" value="I'm Feeling Lucky" class="btn" />
       </form>
     </div>
