--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Google 2.0 | Search</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <title>Rapier | Search</title>
 </head>
 <body>
     <header>
-        <h1>Google 2.0</h1>
-        <button class="header">Bilder</button>
-        <button class="header">Videoer</button>
+        <div class="topbar">
+            <img src="assets/settings.svg" alt="settings" width="48" height="48">
+            <h1>Rapier</h1>
+            <img src="assets/user.svg" alt="settings" width="48" height="48">
+        </div>
+        <div class="navbar">
+            <button class="header">Bilder</button>
+            <button class="header">Videoer</button>
+        </div>
     </header>
     <div id="searchPage">
         <form id="searchForm">
             <input type="text" id="search" name="search" placeholder="Søk her">
-            <input type="submit" value="Google Search" class="btn">
+            <input type="submit" value="Rapier Search" class="btn">
           </form>
     </div>
     <footer>
