--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -12,10 +12,12 @@
 
     </header>
     <div id="sideabr">
-        e
+        <button class="full">Themes</button>
     </div>
     <div id="mainPage">
-        e
+        <div id="themes">
+        </div>
     </div>
+    <script src="scripts/settings.js"></script>
 </body>
 </html>
