cors, (nå veldig sikker)

--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="topbar">
-            <img src="assets/settings.svg" alt="settings" width="48" height="48">
+            <a href="settings.html"><img src="assets/settings.svg" alt="settings" width="48" height="48" id="settIcon"></a>
             <h1>Rapier</h1>
             <img src="assets/user.svg" alt="settings" width="48" height="48">
         </div>
