--- a/Front-end/Index.html
+++ b/Front-end/Index.html
@@ -22,6 +22,6 @@
       </form>
     </div>
   </body>
-  <script src="search.js"></script>
+  <script src="scripts/search.js"></script>
   <script src="scripts/customize.js"></script>
 </html>
