--- a/Front-end/Index.html
+++ b/Front-end/Index.html
@@ -10,8 +10,7 @@
     <header>
       <div class="topbar">
         <a href="settings.html"><img src="assets/settings.svg" alt="settings" width="48" height="48" id="settIcon"></a>
-        <h1>Rapier</h1>
-        <img src="assets/user.svg" alt="settings" width="48" height="48">
+        <a href="Index.html"><h1>Rapier</h1></a>
       </div>
     </header>
     <div class="search-container">
@@ -22,6 +21,12 @@
       </form>
     </div>
   </body>
-  <script src="scripts/search.js"></script>
+  <script>
+    const searchForm = document.getElementById("searchForm");
+    searchForm.addEventListener("submit",(event) =>{
+        event.preventDefault()
+        window.location = `search.html?query=${event.target[0].value}`
+    });
+  </script>
   <script src="scripts/customize.js"></script>
 </html>
