--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -41,7 +41,9 @@
             </div>
             
         </div>
-        <div id="privacy"></div>
+        <div id="privacy">
+            <!--her skal søkehistorie gå-->
+        </div>
     </div>
     
     <script src="scripts/settings.js"></script>
