--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -35,8 +35,12 @@
                         
                     </div>
                 </div>
-                    <input type="text" name="" id="themeNamer" placeholder="Theme name">
-                    <input type="submit" class="btn" value="Add theme" id="themeAdder">
+                <form id="themeForm">
+                    <label for="background">background color</label> <input type="color" name="background" id="">
+                    <label for="headerbaackground">header background color</label> <input type="color" name="headerbaackground>" id="">
+                    <label for="background color">background color</label> <input type="color" name="accentcolor>" id="">
+                    <label for="background color">background color</label> <input type="color" name="text>" id="">
+                    <label for="background color">background color</label> <input type="color" name="header>" id="">
                 </form>
             </div>
         </div>
