new theme, more api

--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <div id="searchPage">
-        <form id="searchBar">
+        <form id="searchBar" name="searchForm">
             <input type="text" id="search" name="search" placeholder="query">
             <input type="submit" value="Search" class="btn">
           </form>
