--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -22,6 +22,12 @@
         <div id="themes">
             <h2>Themes</h2>
             <div id="themeHolder"></div>
+            <div class="preTheme add">
+                <div>
+                    +
+                </div>
+                <h3>Make a theme</h3>
+            </div>
             <h2>Make a theme</h2>
             <div id="themeMaker">
                 
