--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -8,7 +8,7 @@
     <title>Rapier | Settings</title>
 </head>
 <body>
-    <div id="themeMaker" class="popup">
+    <div id="themeMaker" class="popup" hidden>
                 
         <form id="themeForm">
             <div class="preTheme" id="colorshow">
