--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -31,12 +31,8 @@
 
     </div>
     <footer>
-        <div id="pageSwitch" hidden>
-            <button class="pageNum"><</button>
-            <button class="pageNum">1</button>
-            <button class="pageNum">2</button>
-            <button class="pageNum">3</button>
-            <button class="pageNum">></button>
+        <div id="pageSwitch">
+            
         </div>
         
     </footer>
