--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -23,7 +23,7 @@
             </div>
           </form>
     </div>
-    <div>
+    <div id="searchOptions">
         <button >Bilder</button>
         <button >Videoer</button>
     </div>
