--- a/Front-end/settings.html
+++ b/Front-end/settings.html
@@ -72,7 +72,7 @@
         }
         function clearSearchLog() {
             localStorage.removeItem('searchLog');
-            displaySearchLog(); // Oppdaterer visningen slik at den reflekterer de tomme bokmerkene
+            displaySearchLog(); 
         }
 
         function clearBookmarks() {
