searchFix and thememaker additions

--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -24,8 +24,8 @@
           </form>
     </div>
     <div id="searchOptions">
-        <button >Bilder</button>
-        <button >Videoer</button>
+        <button >Sites</button>
+        <button >Images</button>
     </div>
     <div id="searchResults">
 
