search mode switching

--- a/Front-end/search.html
+++ b/Front-end/search.html
@@ -24,8 +24,8 @@
           </form>
     </div>
     <div id="searchOptions">
-        <button >Sites</button>
-        <button >Images</button>
+        <button onclick="switchSearchType('site')">Sites</button>
+        <button onclick="switchSearchType('image')">Images</button>
     </div>
     <div id="searchResults">
 
